HelloWorld/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_101\bin\javadoc.exe
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld
-d
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\ObjectDetection.java
<---- end of javadoc command ---->
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\ObjectDetection.java...
Constructing Javadoc information...
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\ObjectDetection.java:1: error: package lejos.nxt does not exist
import lejos.nxt.RangeFeature;
                ^
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\ObjectDetection.java:2: error: package lejos.nxt does not exist
import lejos.nxt.LCD;
                ^
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\ObjectDetection.java:3: error: package lejos.nxt does not exist
import lejos.nxt.Motor;
                ^
Standard Doclet version 1.8.0_101
Building tree for all the packages and classes...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\ObjectDetection.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\package-frame.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\package-summary.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\allclasses-frame.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\allclasses-noframe.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\index.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\stylesheet.css...
Note: Custom tags that could override future standard tags:  @pre, @post. To avoid potential overrides, use at least one period character (.) in custom tag names.
Note: Custom tags that were not seen:  @pre, @post
3 warnings
